# proyects-api

./: .env.example  .gitignore  .mcp.json  Cargo.toml  Makefile  README.md  examples.http  test_migration.rs
migrations/: 20250101000000_create_projects_table.sql  20250102000000_add_rating_to_projects.sql  20250103000000_create_technologies_table.sql  20250104000000_create_users_table.sql  20250105000000_create_project_technologies_table.sql  20250106000000_create_project_users_table.sql  20250107000000_seed_test_data.sql  20250108000000_add_performance_indexes.sql
src/: extractors.rs  lib.rs  main.rs
src/error/: mod.rs
src/handlers/: mod.rs  projects.rs  technologies.rs  users.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: mod.rs  pagination.rs  project.rs  technology.rs  user.rs
src/routes/: mod.rs
src/state/: mod.rs
