[package]
name = "proyects-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tower middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error handling
thiserror = "2"

# Database - SQLx with SQLite
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
# Testing
http = "1"
tower = { version = "0.5", features = ["util"] }
